--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -20,7 +20,7 @@ h1,h2,h3,h4,h5,h6 {
 
 h5 > span {
   font-size: 14px;
-  margin-left: 15px;
+  margin-#{$global-left}: 15px;
   color: #777;
 }
 
@@ -53,20 +53,20 @@ nav {
 }
 
 header, main, footer {
-  padding-left: 300px;
+  padding-#{$global-left}: 300px;
 }
 .parallax-demo header,
 .parallax-demo main,
 .parallax-demo footer {
-  padding-left: 0;
+  padding-#{$global-left}: 0;
 }
 footer.example {
-  padding-left: 0;
+  padding-#{$global-left}: 0;
 }
 
 @media #{$medium-and-down} {
   header, main, footer {
-    padding-left: 0;
+    padding-#{$global-left}: 0;
   }
   h5 > span {
     display: block;
@@ -150,10 +150,10 @@ a.button-collapse.top-nav {
   text-align: center;
   height: 48px;
   width: 48px;
-  left: 7.5%;
+  #{$global-left}: 7.5%;
   top: 0;
   float: none;
-  margin-left: 1.5rem;
+  margin-#{$global-left}: 1.5rem;
   color: #fff;
   font-size: 36px;
   z-index: 2;
@@ -169,7 +169,7 @@ a.button-collapse.top-nav {
 
 @media #{$small-and-down} {
   a.button-collapse.top-nav {
-    left: 5%;
+    #{$global-left}: 5%;
   }
 }
 
@@ -408,7 +408,7 @@ $width: 100%;
 $height: auto;
 
 .browser-window {
-  text-align: left;
+  text-align: $global-left;
   width: $width;
   height: $height;
   display: inline-block;
@@ -432,7 +432,7 @@ $height: auto;
   display: inline-block;
   border-radius: 50%;
   background-color: lighten($topColor, 10%);
-  margin-right: 1px;
+  margin-#{$global-right}: 1px;
 }
 #close-circle {
   background-color: #FF5C5A;
@@ -507,7 +507,7 @@ $height: auto;
   width: 150px;
   height: 115px;
 
-  float: left;
+  float: $global-left;
   margin: 0 0px 15px 0px;
   p {
     margin: 0 0;
@@ -581,7 +581,7 @@ pre[class*="language-"] {
     padding: 1px 5px;
     background: hsl(30, 10%, 90%);
     top: 0;
-    left: 0;
+    #{$global-left}: 0;
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
     color: #555;
@@ -589,7 +589,7 @@ pre[class*="language-"] {
     font-size: .9rem;
     border: solid 1px rgba(51, 51, 51, 0.12);
     border-top: none;
-    border-left: none;
+    border-#{$global-left}: none;
   }
   padding: 25px 12px 7px 12px;
   border: solid 1px rgba(51, 51, 51, 0.12);
@@ -610,7 +610,7 @@ pre[class*="language-"] {
   max-width: 150px;
   display: inline-block;
   position: relative;
-  text-align: left;
+  text-align: $global-left;
   -webkit-font-smoothing: antialiased;
 
   & > span,
@@ -621,7 +621,7 @@ pre[class*="language-"] {
   a.carbon-img {
     height: 100px;
     display: inline-block;
-    margin-right: 10px;
+    margin-#{$global-right}: 10px;
   }
   a.carbon-text,
   input[type="submit"] {
@@ -635,7 +635,7 @@ pre[class*="language-"] {
   }
   a.carbon-poweredby {
     position: relative;
-    left: 28px;
+    #{$global-left}: 28px;
     font-size: 11px;
     color: color("red", "lighten-3");
   }
@@ -647,7 +647,7 @@ pre[class*="language-"] {
 
   a.carbon-text {
     top: 5px;
-    left: 0;
+    #{$global-left}: 0;
     width: 130px;
     display: block;
     font-size: 13px;
@@ -683,8 +683,8 @@ pre[class*="language-"] {
   }
 
   .carbon-img {
-    float: left;
-    margin-right: 1em;
+    float: $global-left;
+    margin-#{$global-right}: 1em;
   }
 
   .carbon-text {
@@ -694,8 +694,8 @@ pre[class*="language-"] {
 
   .carbon-poweredby {
     position: absolute;
-    left: auto;
-    right: 0;
+    #{$global-left}: auto;
+    #{$global-right}: 0;
     bottom: -4px;
   }
 }
@@ -705,14 +705,14 @@ pre[class*="language-"] {
 .buysellads {
   &.buysellads-demo {
     bottom: 20px;
-    right: 20px;
+    #{$global-right}: 20px;
     position: fixed;
     padding: 10px;
     background-color: rgba(255,255,255,.9);
     z-index: 1000;
 
     #carbonads a.carbon-img {
-      margin-right: 0;
+      margin-#{$global-right}: 0;
     }
 
     #carbonads a.carbon-text {
@@ -735,7 +735,7 @@ pre[class*="language-"] {
       width: 24px;
       position: absolute;
       top: -6px;
-      right: -6px;
+      #{$global-right}: -6px;
       z-index: 1;
       transition: background-color .2s;
     }
@@ -747,11 +747,11 @@ pre[class*="language-"] {
   .bsa_it.one {
     width: 130px;
     position: absolute;
-    left: 0;
+    #{$global-left}: 0;
     top: 50px;
 
     .bsa_it_p {
-      left: 0;
+      #{$global-left}: 0;
       bottom: -15px;
     }
     .bsa_it_ad .bsa_it_t { color: color("red", "lighten-2"); }
@@ -774,7 +774,7 @@ pre[class*="language-"] {
   min-width: 230px;
   max-width: 270px;
   display: inline-block;
-  text-align: left;
+  text-align: $global-left;
 
   .bsa_it_ad {
     border: 0;
@@ -786,8 +786,8 @@ pre[class*="language-"] {
   }
 
   .bsa_it_p {
-    right: auto;
-    left: 40px;
+    #{$global-right}: auto;
+    #{$global-left}: 40px;
     bottom: -5px;
 
     a { color: color("red", "lighten-4"); }
@@ -957,7 +957,7 @@ body.parallax-demo footer {
     i.material-icons {
       position: absolute;
       top: 10px;
-      right: 10px;
+      #{$global-right}: 10px;
       cursor: pointer;
     }
   }
@@ -999,7 +999,7 @@ body.themes {
 }
 .shopify-buy-frame,
 .shopify-btn {
-  float: left;
+  float: $global-left;
 }
 .shopify-buy-frame {
   width: 105px;
