initial rtl support for form components

--- a/sass/components/forms/_checkboxes.scss
+++ b/sass/components/forms/_checkboxes.scss
@@ -4,7 +4,7 @@
 /* CUSTOM CSS CHECKBOXES */
 form p {
   margin-bottom: 10px;
-  text-align: left;
+  text-align: $global-left;
 }
 
 form p:last-child {
@@ -15,7 +15,7 @@ form p:last-child {
 [type="checkbox"]:not(:checked),
 [type="checkbox"]:checked {
   position: absolute;
-  left: -9999px;
+  #{$global-left}: -9999px;
   opacity: 0;
 }
 
@@ -24,7 +24,7 @@ form p:last-child {
   // Text Label Style
   + label {
     position: relative;
-    padding-left: 35px;
+    padding-#{$global-left}: 35px;
     cursor: pointer;
     display: inline-block;
     height: 25px;
@@ -43,7 +43,7 @@ form p:last-child {
     content: '';
     position: absolute;
     top: 0;
-    left: 0;
+    #{$global-left}: 0;
     width: 18px;
     height: 18px;
     z-index: 0;
@@ -68,7 +68,7 @@ form p:last-child {
     transform: scale(1);
     border: 0;
     border-radius: 50%;
-    box-shadow: 0 0 0 10px rgba(0,0,0,.1);
+    box-shadow: if($global-direction == ltr, 0 0 0 10px rgba(0,0,0,.1), 0 10px 0 0 rgba(0,0,0,.1));
     background-color: rgba(0,0,0,.1);
   }
 }
@@ -76,12 +76,12 @@ form p:last-child {
 [type="checkbox"]:checked {
   + label:before {
     top: -4px;
-    left: -5px;
+    #{$global-left}: -5px;
     width: 12px;
     height: 22px;
     border-top: 2px solid transparent;
-    border-left: 2px solid transparent;
-    border-right: $radio-border;
+    border-#{$global-left}: 2px solid transparent;
+    border-#{$global-right}: $radio-border;
     border-bottom: $radio-border;
     transform: rotate(40deg);
     backface-visibility: hidden;
@@ -89,7 +89,7 @@ form p:last-child {
   }
 
   &:disabled + label:before {
-    border-right: 2px solid $input-disabled-color;
+    border-#{$global-right}: 2px solid $input-disabled-color;
     border-bottom: 2px solid $input-disabled-color;
   }
 }
@@ -98,12 +98,12 @@ form p:last-child {
 [type="checkbox"]:indeterminate {
   +label:before {
     top: -11px;
-    left: -12px;
+    #{$global-left}: -12px;
     width: 10px;
     height: 22px;
     border-top: none;
-    border-left: none;
-    border-right: $radio-border;
+    border-#{$global-left}: none;
+    border-#{$global-right}: $radio-border;
     border-bottom: none;
     transform: rotate(90deg);
     backface-visibility: hidden;
@@ -112,7 +112,7 @@ form p:last-child {
 
   // Disabled indeterminate
   &:disabled + label:before {
-    border-right: 2px solid $input-disabled-color;
+    border-#{$global-right}: 2px solid $input-disabled-color;
     background-color: transparent;
   }
 }
@@ -127,7 +127,7 @@ form p:last-child {
   + label:before,
   + label:after {
     content: '';
-    left: 0;
+    #{$global-left}: 0;
     position: absolute;
     /* .1s delay is for check animation */
     transition: border .25s, background-color .25s, width .20s .1s, height .20s .1s, top .20s .1s, left .20s .1s;
@@ -139,7 +139,7 @@ form p:last-child {
     width: 0;
     height: 0;
     border: 3px solid transparent;
-    left: 6px;
+    #{$global-left}: 6px;
     top: 10px;
 
     -webkit-transform: rotateZ(37deg);
@@ -161,12 +161,12 @@ form p:last-child {
   &:checked {
     + label:before {
       top: 0;
-      left: 1px;
+      #{$global-left}: 1px;
       width: 8px;
       height: 13px;
       border-top: 2px solid transparent;
-      border-left: 2px solid transparent;
-      border-right: 2px solid $input-background;
+      border-#{$global-left}: 2px solid transparent;
+      border-#{$global-right}: 2px solid $input-background;
       border-bottom: 2px solid $input-background;
       -webkit-transform: rotateZ(37deg);
       transform: rotateZ(37deg);
