--- a/sass/components/forms/_file-input.scss
+++ b/sass/components/forms/_file-input.scss
@@ -6,13 +6,13 @@
 
   .file-path-wrapper {
     overflow: hidden;
-    padding-left: 10px;
+    padding-#{$global-left}: 10px;
   }
 
   input.file-path { width: 100%; }
 
   .btn {
-    float: left;
+    float: $global-left;
     height: $input-height;
     line-height: $input-height;
   }
