--- a/sass/components/forms/_input-fields.scss
+++ b/sass/components/forms/_input-fields.scss
@@ -66,7 +66,7 @@ textarea.materialize-textarea {
   // Focused input style
   &:focus:not([readonly]) {
     border-bottom: 1px solid $input-focus-color;
-    box-shadow: if($global-direction == ltr, 0 1px 0 0 $input-focus-color, 0 0 0 1px $input-focus-color);
+    box-shadow: 0 1px 0 0 $input-focus-color;
   }
 
   // Focused label style
@@ -78,7 +78,7 @@ textarea.materialize-textarea {
   &.valid,
   &:focus.valid {
     border-bottom: 1px solid $input-success-color;
-    box-shadow: if($global-direction == ltr, 0 1px 0 0 $input-success-color, 0 0 0 1px $input-success-color);
+    box-shadow: 0 1px 0 0 $input-success-color;
   }
 
   // Custom Success Message
@@ -93,7 +93,7 @@ textarea.materialize-textarea {
   &.invalid,
   &:focus.invalid {
     border-bottom: $input-invalid-border;
-    box-shadow: if($global-direction == ltr, 0 1px 0 0 $input-error-color, 0 0 0 1px $input-error-color);
+    box-shadow: 0 1px 0 0 $input-error-color;
   }
 
   // Custom Error message
