--- a/sass/components/_materialbox.scss
+++ b/sass/components/_materialbox.scss
@@ -33,7 +33,7 @@
   color: #fff;
   line-height: 50px;
   bottom: 0;
-  left: 0;
+  #{$global-left}: 0;
   width: 100%;
   text-align: center;
   padding: 0% 15%;
