--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -43,7 +43,7 @@ nav {
 
   // Collapse button
   .button-collapse {
-    float: left;
+    float: $global-left;
     position: relative;
     z-index: 1;
     height: $navbar-height-mobile;
@@ -94,8 +94,8 @@ nav {
     i,
     [class^="mdi-"], [class*="mdi-"],
     i.material-icons {
-      float: left;
-      margin-right: 15px;
+      float: $global-left;
+      margin-#{$global-right}: 15px;
     }
   }
 
@@ -114,7 +114,7 @@ nav {
 
     li {
       transition: background-color .3s;
-      float: left;
+      float: $global-left;
       padding: 0;
 
       &.active {
@@ -163,7 +163,7 @@ nav {
       height: 100%;
       font-size: 1.2rem;
       border: none;
-      padding-left: 2rem;
+      padding-#{$global-left}: 2rem;
 
       &:focus, &[type=text]:valid, &[type=password]:valid,
       &[type=email]:valid, &[type=url]:valid, &[type=date]:valid {
@@ -174,7 +174,7 @@ nav {
 
     label {
       top: 0;
-      left: 0;
+      #{$global-left}: 0;
 
       i {
         color: rgba(255,255,255,.7);
