--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -32,7 +32,7 @@
       opacity: 0;
       position: absolute;
       top: 0;
-      left: 0;
+      #{$global-left}: 0;
       z-index: 1;
       width: 100%;
       height: inherit;
@@ -49,7 +49,7 @@
         color: #fff;
         position: absolute;
         top: 15%;
-        left: 15%;
+        #{$global-left}: 15%;
         width: 70%;
         opacity: 0;
 
