--- a/sass/components/_tooltip.scss
+++ b/sass/components/_tooltip.scss
@@ -12,7 +12,7 @@
   text-align: center;
   max-width: calc(100% - 4px);
   overflow: hidden;
-  left: 0;
+  #{$global-left}: 0;
   top: 0;
   pointer-events: none;
   visibility: hidden;
