--- a/sass/components/_tapTarget.scss
+++ b/sass/components/_tapTarget.scss
@@ -93,7 +93,7 @@
 
 .tap-target-origin {
   top: 50%;
-  left: 50%;
+  #{$global-left}: 50%;
   transform: translate(-50%,-50%);
 
   z-index: 10002;
