--- a/sass/components/_sideNav.scss
+++ b/sass/components/_sideNav.scss
@@ -1,7 +1,7 @@
 .side-nav {
   position: fixed;
   width: 300px;
-  #{$global-left}: 0;
+  left: 0;
   top: 0;
   margin: 0;
   transform: translateX(-100%);
@@ -153,7 +153,7 @@
 
 // Fixed side-nav shown
 .side-nav.fixed {
-  #{$global-left}: 0;
+  left: 0;
   transform: translateX(0);
   position: fixed;
 
