--- a/sass/components/forms/_checkboxes.scss
+++ b/sass/components/forms/_checkboxes.scss
@@ -76,12 +76,12 @@ form p:last-child {
 [type="checkbox"]:checked {
   + label:before {
     top: -4px;
-    #{$global-left}: -5px;
+    #{$global-left}: if($global-direction == ltr, -5px, 10px);
     width: 12px;
     height: 22px;
     border-top: 2px solid transparent;
-    border-#{$global-left}: 2px solid transparent;
-    border-#{$global-right}: $radio-border;
+    border-left: 2px solid transparent;
+    border-right: $radio-border;
     border-bottom: $radio-border;
     transform: rotate(40deg);
     backface-visibility: hidden;
@@ -89,7 +89,7 @@ form p:last-child {
   }
 
   &:disabled + label:before {
-    border-#{$global-right}: 2px solid $input-disabled-color;
+    border-right: 2px solid $input-disabled-color;
     border-bottom: 2px solid $input-disabled-color;
   }
 }
@@ -98,12 +98,12 @@ form p:last-child {
 [type="checkbox"]:indeterminate {
   +label:before {
     top: -11px;
-    #{$global-left}: -12px;
+    #{$global-left}: if($global-direction == ltr, -12px, 20px);
     width: 10px;
     height: 22px;
     border-top: none;
-    border-#{$global-left}: none;
-    border-#{$global-right}: $radio-border;
+    border-left: none;
+    border-right: $radio-border;
     border-bottom: none;
     transform: rotate(90deg);
     backface-visibility: hidden;
@@ -161,12 +161,12 @@ form p:last-child {
   &:checked {
     + label:before {
       top: 0;
-      #{$global-left}: 1px;
+      #{$global-left}: if($global-direction == ltr, 1px, 10px);
       width: 8px;
       height: 13px;
       border-top: 2px solid transparent;
-      border-#{$global-left}: 2px solid transparent;
-      border-#{$global-right}: 2px solid $input-background;
+      border-left: 2px solid transparent;
+      border-right: 2px solid $input-background;
       border-bottom: 2px solid $input-background;
       -webkit-transform: rotateZ(37deg);
       transform: rotateZ(37deg);
